2010-11-09  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/windows.jl: added window-role function
				      merged get-window-by-name-re into get-window-by-name
				      added possibility to get-window-by-name to check on icon-name
				      merged get-window-by-class-re into get-window-by-class
				      added get-window-by-id
				      added get-window-by-role

2010-11-06  Teika kazura <teika@lavabit.com>
	* man/news.texi
	* sawfish.el: supports let-loop indent.

	* lisp/sawfish/gtk/widget.jl
	* lisp/sawfish/wm/commands.jl
	* lisp/sawfish/wm/custom.jl
	* lisp/sawfish/wm/state/wm-spec.jl
	* lisp/sawfish/wm/util/ping.jl: Corrected indents of 'let' using
	new sawfish.el.

	* lisp/sawfish/wm/integration/kde.jl
	* lisp/sawfish/wm/user.jl
	* man/news.texi: Bugfix: It was impossible for users to override
	`kde-desktop-directories'.

	* lisp/sawfish/wm/autoload.jl
	* lisp/sawfish/wm/keymaps.jl
	* lisp/sawfish/wm/menus.jl
	* lisp/sawfish/wm/util/compat.jl
	* man/news.texi: Renamed popup-window-menu to popup-window-ops-menu.
	Old name is supported, too.

	* OPTIONS
	* lisp/sawfish/wm/menus.jl
	* man/news.texi
	* man/sawfish.texi
	* po/README
	* sawfish.spec.in: Doc.
	Section of "popup menu" is rewritten.
	"commandp" doc correction; t can be returned only for symbols.
	Minor po/README update.
	RPM spec file is declared to be unofficial.

2010-10-23  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/windows.jl: remove desktop check from rename-window-func

2010-10-21  Christopher Bratusek <zanghar@freenet.de>
	* man/news.texi: fixed a typo
	                 updated

	* lisp/sawfish/wm/windows.jl: behavior change in `rename-window'.
	Check NEWS for more infos.

2010-10-19  Teika kazura <teika@lavabit.com>
	* man/news.texi: Added a template.

	* CONTRIBUTING
	* Makefile.in
	* man/news.texi
	* po/README
	* po/make-pot: Doc. Added Kim B Heino to the "Thanks" list.
	News. More translation docs.

2010-10-16  Christopher Bratusek <zanghar@freenet.de>