@@ -51,8 +51,8 @@
     "jump to a window matched by re, or start program otherwise."
     (catch 'return
       (let ((wind (if class
-                    (get-window-by-class-re re)
-                    (get-window-by-name-re re))))
+                    (get-window-by-clase re #:regex t)
+                    (get-window-by-name re #:regex t))))
         (if (functionp onfocused) ; check if already focused
             (let ((curwin (input-focus)))
               (if curwin
