@@ -5,6 +5,10 @@
 				      merged get-window-by-class-re into get-window-by-class
 				      added get-window-by-id
 				      added get-window-by-role
+				      added dummy get-window-by-class-re for compat
+				      added dummy get-window-by-name-re for compat
+
+	* lisp/sawfish/wm/commands/jump-or-exec.jl: updated
 
 2010-11-06  Teika kazura <teika@lavabit.com>
 	* man/news.texi
